[gd_scene load_steps=4 format=3 uid="uid://d0m1fiwnsk3tf"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://resources/theme/wc3_theme.tres" id="1_fm3ja"]
[ext_resource type="PackedScene" uid="uid://dc67simk1xfp4" path="res://src/title_screen/game_mode_ui.tscn" id="2_g0u3e"]
[ext_resource type="Script" path="res://src/title_screen/mutliplayer/create_lan_room_menu.gd" id="2_tb3dy"]

[node name="CreateLanRoomMenu" type="PanelContainer" node_paths=PackedStringArray("_game_mode_ui")]
theme = ExtResource("1_fm3ja")
theme_type_variation = &"MainPanelContainer"
script = ExtResource("2_tb3dy")
_game_mode_ui = NodePath("VBoxContainer/GameModeUI")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "Choose game settings:"

[node name="GameModeUI" parent="VBoxContainer" instance=ExtResource("2_g0u3e")]
layout_mode = 2

[node name="Spacer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create
"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
